--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://chrismeier.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+url: http://ChrisMeier.github.io
+title: Chris Meier's Blog
+subtitle: Lessons Learned with Ruby on Rails + Me
+author: Chris Meier
 simple_search: http://google.com/search
-description:
+description: Chris Meier's lesson's learned while getting to know Ruby on Rails with the occasional opinion from me about something relevant to my life. Maybe?
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -20,6 +20,7 @@ subscribe_rss: /atom.xml
 subscribe_email:
 # RSS feeds can list your email address if you like
 email:
+site.email: 'chrismeier02@gmail.com'
 
 # ----------------------- #
 #    Jekyll & Plugins     #
@@ -50,7 +51,7 @@ titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
+default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html, custom/asides/twitter.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
@@ -63,22 +64,23 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 # ----------------------- #
 
 # Github repositories
-github_user:
-github_repo_count: 0
+github_user: chrismeier
+github_repo_count: 2
 github_show_profile_link: true
-github_skip_forks: true
+github_skip_forks: false
 
 # Twitter
-twitter_user:
+twitter_user: chris_meier91
 twitter_tweet_button: true
+twitter_widget_it: 382925735901417472
 
 # Google +1
-google_plus_one: false
+google_plus_one: true
 google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user:
+googleplus_user: 102709861765506118545
 googleplus_hidden: false
 
 # Pinboard
@@ -90,11 +92,31 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
-disqus_show_comment_count: false
+disqus_short_name: chris-on-rails
+disqus_show_comment_count: true
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-41669279-1
 
 # Facebook Like
-facebook_like: false
+facebook_like: true
+
+linkedin_user: chrismeier02@gmail.com
+
+# ----------------------- #
+#   Octoflat Navigation   #
+# ----------------------- #
+
+social:
+  title: # Defaults to "Follow me!" if not present
+  adn: # App.net
+  dribbble:
+  facebook:
+  github: ChrisMeier
+  googleplus: 102709861765506118545
+  linkedin: chrismeier1
+  pinterest:
+  stackoverflow: 2154894/chrismeier
+  twitter: chris_meier91
+  youtube:
+
