Just another update with fixes to homepage

--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ linkedin_user: chrismeier02@gmail.com
 # ----------------------- #
 
 social:
-  title: # Defaults to "Follow me!" if not present
+  title: Connect with me on...
   adn: # App.net
   dribbble:
   facebook:
